Fix popup display on iOS

--- a/src/ui/PopupScreen.css
+++ b/src/ui/PopupScreen.css
@@ -11,8 +11,6 @@
 .PopupScreen .container {
   box-sizing: border-box;
   position: relative;
-  top: 50%;
-  transform: translateY(-50%);
   max-height: 100%;
   background-color: #eee;
   color: #000;
